--- a/src/Smartstore.Modules/Smartstore.WebApi/Localization/resources.de-de.xml
+++ b/src/Smartstore.Modules/Smartstore.WebApi/Localization/resources.de-de.xml
@@ -3,7 +3,7 @@
         <Value>Web API</Value>
     </LocaleResource>
     <LocaleResource Name="Plugins.Description.SmartStore.WebApi" AppendRootKey="false">
-        <Value>Ermöglicht den Datenaustausch mit Smartstore</Value>
+        <Value>Ermöglicht den Datenaustausch mit Smartstore.</Value>
     </LocaleResource>
     <LocaleResource Name="Plugins.Permissions.DisplayName.WebApi" AppendRootKey="false">
         <Value>Web API</Value>
