--- a/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
@@ -385,6 +385,15 @@
             <LocaleResource Name="FundingsCart.Hint">
                 <Value>Specifies which payment options to display on the shopping cart page.</Value>
             </LocaleResource>
+
+            <LocaleResource Name="TransmitTrackingNumbers">
+                <Value>Transmit tracking numbers</Value>
+            </LocaleResource>
+            <LocaleResource Name="TransmitTrackingNumbers.Hint">
+                <Value>
+                    Specifies whether tracking numbers should be sent to PayPal as soon as they have been entered or updated in the shipment.
+                </Value>
+            </LocaleResource>
             <LocaleResource Name="Capture">
                 <Value>Immediately debit</Value>
             </LocaleResource>
