--- a/src/Smartstore.Modules/Smartstore.DevTools/Localization/resources.en-us.xml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Localization/resources.en-us.xml
@@ -31,6 +31,8 @@
         <Value>Injects tooltips into every widget zone, which includes the name of the current widget zone. The display of these tooltips is limited to admintrators.</Value>
     </LocaleResource>
     <LocaleResource Name="WidgetZoneMenu">
+        <Value>Show widget zone menu</Value>
+        <Value>Widget-Zonen-Menü anzeigen</Value>
         <Children>
             <LocaleResource Name="Toolbar">
                 <Value>Widget zone toolbar</Value>
