Closes #1171 Prefer `MapperFactory` instead of `MiniMapper` when mapping view models

--- a/src/Smartstore.Modules/Smartstore.Google.MerchantCenter/Localization/resources.en-us.xml
+++ b/src/Smartstore.Modules/Smartstore.Google.MerchantCenter/Localization/resources.en-us.xml
@@ -14,7 +14,7 @@
 
     <LocaleResource Name="AdminInstruction">
         <Value>
-            <![CDATA[<ul>
+            <![CDATA[<ul class="mb-0">
 			<li>Either the GTIN (such as UPC, EAN, etc.) or manufacturer and manufacturer part number (MPN) are required for product identification. Google recommends that all three pieces of information be specified.</li>
 			<li>Specify default tax and shipping values in your Google Merchant Center account settings.</li>
 			<li>In order to get more info about required fields look at the following article <a href="http://support.google.com/merchants/bin/answer.py?hl=en&answer=188494" target="_blank">Product feed specification</a>.</li>
