--- a/src/Smartstore.Modules/Smartstore.Google.MerchantCenter/Localization/resources.de-de.xml
+++ b/src/Smartstore.Modules/Smartstore.Google.MerchantCenter/Localization/resources.de-de.xml
@@ -14,7 +14,7 @@
 
     <LocaleResource Name="AdminInstruction">
         <Value>
-            <![CDATA[<ul>
+            <![CDATA[<ul class="mb-0">
 				<li>Für die Produktidentifizierung muss entweder die GTIN (z.B. als UPC, EAN etc.) oder der Hersteller samt Hersteller-Artikelnummer (MPN) hinterlegt sein. Google empfiehlt die Angabe aller drei Informationen.</li>
 				<li>Standard Steuer- und Versanddaten sind in den Einstellungen Ihres Google-Merchant-Center-Kontos zu hinterlegen.</li>
 				<li>Mehr Informationen zu benötigten Feldern finden Sie im Artikel <a href="http://support.google.com/merchants/bin/answer.py?hl=de&answer=188494" target="_blank">Produkt-Feed-Spezifikationen</a>.</li>
