--- a/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.de-de.xml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.de-de.xml
@@ -387,7 +387,18 @@
                     Legt fest, ob Tracking-Nummern an PayPal gesendet werden sollen, sobald sie in der Sendung eingegeben oder aktualisiert wurden.
                 </Value>
             </LocaleResource>
+
+            <LocaleResource Name="CancelOrdersForDeclinedPayments">
+                <Value>Bestellungen für abgelehnte Kreditkartenzahlungen stornieren</Value>
+            </LocaleResource>
+            <LocaleResource Name="CancelOrdersForDeclinedPayments.Hint">
+                <Value>
+                    Legt fest, ob Bestellungen für abgelehnte Kreditkartenzahlungen storniert werden sollen.
+                    Ist diese Option ausgeschaltet, wird lediglich der Zahlungsstatus der Bestellung auf 'Ausstehend' gesetzt.
+                </Value>
+            </LocaleResource>
             
+
             <LocaleResource Name="Capture">
                 <Value>Sofort abbuchen</Value>
             </LocaleResource>
