--- a/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.de-de.xml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.de-de.xml
@@ -25,8 +25,8 @@
     <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalCreditCard" AppendRootKey="false">
         <Value>PayPal Kreditkarte</Value>
     </LocaleResource>
-    <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalGiroPay" AppendRootKey="false">
-        <Value>Giropay</Value>
+    <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalTrustly" AppendRootKey="false">
+        <Value>Trustly</Value>
     </LocaleResource>
     <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalBancontact" AppendRootKey="false">
         <Value>Bancontact</Value>
@@ -87,10 +87,10 @@
             ]]>
         </Value>
     </LocaleResource>
-    <LocaleResource Name="Plugins.Description.Payments.PayPalGiroPay" AppendRootKey="false">
+    <LocaleResource Name="Plugins.Description.Payments.PayPalTrustly" AppendRootKey="false">
         <Value>
             <![CDATA[
-			    Nach Abschluss der Bestellung wird der Kunde direkt zu GiroPay weitergeleitet, um den Bezahlvorgang abzuschließen.
+			    Nach Abschluss der Bestellung wird der Kunde direkt zu Trustly weitergeleitet, um den Bezahlvorgang abzuschließen.
             ]]>
         </Value>
     </LocaleResource>
@@ -178,10 +178,10 @@
                       ]]>
                 </Value>
             </LocaleResource>
-            <LocaleResource Name="PayPalGiroPay" AppendRootKey="false">
+            <LocaleResource Name="PayPalTrustly" AppendRootKey="false">
                 <Value>
                     <![CDATA[
-                        Sie werden auf die Website von Giropay weitergeleitet, um die Zahlung abzuschließen.
+                        Sie werden auf die Website von Trustly weitergeleitet, um die Zahlung abzuschließen.
                       ]]>
                 </Value>
             </LocaleResource>
@@ -389,11 +389,11 @@
             </LocaleResource>
 
             <LocaleResource Name="CancelOrdersForDeclinedPayments">
-                <Value>Bestellungen für abgelehnte Kreditkartenzahlungen stornieren</Value>
+                <Value>Bestellungen für abgelehnte Zahlungen stornieren</Value>
             </LocaleResource>
             <LocaleResource Name="CancelOrdersForDeclinedPayments.Hint">
                 <Value>
-                    Legt fest, ob Bestellungen für abgelehnte Kreditkartenzahlungen storniert werden sollen.
+                    Legt fest, ob Bestellungen für abgelehnte Zahlungen storniert werden sollen.
                     Ist diese Option ausgeschaltet, wird lediglich der Zahlungsstatus der Bestellung auf 'Ausstehend' gesetzt.
                 </Value>
             </LocaleResource>
