--- a/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
@@ -402,8 +402,8 @@
             </LocaleResource>
             <LocaleResource Name="TransmitTrackingNumbers.Hint">
                 <Value>
-                    Specifies whether tracking numbers should be sent to PayPal as soon as they have been entered or updated in the shipment.
-                    If this option is switched off, only the payment status of the order is set to ‘Pending’.
+                    Specifies whether tracking numbers should be sent to PayPal as soon as they are entered or updated in the shipment.
+                    If this option is disabled, only the payment status of the order will be set to 'Pending'.
                 </Value>
             </LocaleResource>
             <LocaleResource Name="CancelOrdersForDeclinedPayments">
