--- a/src/Smartstore.Modules/Smartstore.Shipping/Localization/resources.en-us.xml
+++ b/src/Smartstore.Modules/Smartstore.Shipping/Localization/resources.en-us.xml
@@ -95,7 +95,7 @@
                 <Value>Shipping origin determines shipping costs if shipping address is missing</Value>
             </LocaleResource>
             <LocaleResource Name="Fields.UseShippingOriginIfShippingAddressMissing.Hint">
-                <Value>Specifies that the shipping costs of the location from which the shipment is made is used, if the customer has never gone through the checkout and his shipping address is unknown. See "Shipping Origin" in the shipping settings.</Value>
+                <Value>Specifies that if the customer has never checked out and their shipping address is not known, the shipping costs from the shipping origin will be used. See "Shipping Origin" in the Shipping settings.</Value>
             </LocaleResource>
             
             <LocaleResource Name="Fields.BaseCharge">
