--- a/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
@@ -22,6 +22,9 @@
     <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalPayLater" AppendRootKey="false">
         <Value>PayPal Pay Later</Value>
     </LocaleResource>
+    <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalGooglePay" AppendRootKey="false">
+        <Value>Google Pay</Value>
+    </LocaleResource>
     <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalCreditCard" AppendRootKey="false">
         <Value>PayPal Creditcard</Value>
     </LocaleResource>
@@ -74,6 +77,13 @@
         <Value>
             <![CDATA[
 			    Opens a secure payment window where the payment is made directly at PayPal.
+            ]]>
+        </Value>
+    </LocaleResource>
+    <LocaleResource Name="Plugins.Description.Payments.PayPalGooglePay" AppendRootKey="false">
+        <Value>
+            <![CDATA[
+			    Provides a secure payment process that seamlessly integrates with Google Pay.
             ]]>
         </Value>
     </LocaleResource>
@@ -168,6 +178,13 @@
                     <![CDATA[
 				        Do the payment in a secure browser window directly at PayPal. 
 				        After redirection back to the store, you can complete the order with a few clicks.
+                      ]]>
+                </Value>
+            </LocaleResource>
+            <LocaleResource Name="PayPalGooglePay" AppendRootKey="false">
+                <Value>
+                    <![CDATA[
+				        Pay directly with Google Pay in a secure environment.
                       ]]>
                 </Value>
             </LocaleResource>
@@ -548,6 +565,9 @@
             </LocaleResource>
             <LocaleResource Name="Error.3DSecure">
                 <Value>An error has occurred when confirming your card with your card provider.</Value>
+            </LocaleResource>
+            <LocaleResource Name="Error.GooglePayTranactionError">
+                <Value>This transaction has failed.</Value>
             </LocaleResource>
             <LocaleResource Name="CartHasChanged">
                 <Value>Your shopping cart has changed after login. Please confirm your current shopping cart with PayPal.</Value>
