--- a/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Localization/resources.en-us.xml
@@ -431,6 +431,17 @@
                     If this option is disabled, only the payment status of the order will be set to 'Pending'.
                 </Value>
             </LocaleResource>
+            <LocaleResource Name="UseTransmittedAddresses">
+                <Value>Use transmitted addresses</Value>
+            </LocaleResource>
+            <LocaleResource Name="UseTransmittedAddresses.Hint">
+                <Value>
+                    Defines whether the addresses returned by PayPal should be added as the customer's billing and delivery address,
+                    if they do not already exist. PayPal does not transfer telephone numbers, for example. It can therefore happen
+                    that, contrary to the settings for address validation, no telephone numbers are available.
+                    Deactivate this function if the customer addresses must match the validation settings in the shop.
+                </Value>
+            </LocaleResource>
             <LocaleResource Name="Capture">
                 <Value>Immediately debit</Value>
             </LocaleResource>
